fix: title spacing

--- a/1.The_Field/html-css/star-wars-crawl/style.css
+++ b/1.The_Field/html-css/star-wars-crawl/style.css
@@ -63,7 +63,7 @@ main > div {
 
 .title {
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 160px;
 }
 
 .text {
